수정사항 반영

--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -1966,27 +1966,47 @@ p {
     }
     &--01 {
       &::before {
-        width: 14px;
+        width: 10%;
+      }
+    }
+    &--01-5 {
+      &::before {
+        width: 30%;
       }
     }
     &--02 {
       &::before {
-        width: 28px;
+        width: 40%;
+      }
+    }
+    &--02-5 {
+      &::before {
+        width: 50%;
       }
     }
     &--03 {
       &::before {
-        width: 42px;
+        width: 60%;
+      }
+    }
+    &--03-5 {
+      &::before {
+        width: 70%;
       }
     }
     &--04 {
       &::before {
-        width: 56px;
+        width: 80%;
+      }
+    }
+    &--04-5 {
+      &::before {
+        width: 90%;
       }
     }
     &--05 {
       &::before {
-        width: 70px;
+        width: 100%;
       }
     }
     &-lg {
