--- a/layout/footer.html
+++ b/layout/footer.html
@@ -6,7 +6,7 @@
     <div class="one-footer-text">
       <dl>
         <dt>학습지원센터</dt>
-        <dd>1588-0000</dd>
+        <dd><a href="">1588-0000</a></dd>
       </dl>
       <p>
         <span>평일 : 09:00~18:00</span>
