--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -2744,7 +2744,7 @@ p {
         }
       }
       table {
-        #course_list {
+        &#course_list {
           tbody,
           tfoot {
             display: block;
