--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -14100,6 +14100,7 @@ hr {
 }
 .kcraedu .education {
   display: flex;
+  gap: 16px;
   width: 100vw;
   height: 100vh;
   padding: 1rem;
@@ -14111,7 +14112,13 @@ hr {
   }
 }
 .kcraedu .education.fold .education-nav {
-  display: none;
+  min-width: 0;
+  width: 0;
+}
+@media (max-width: 767.98px) {
+  .kcraedu .education.fold .education-nav {
+    display: none;
+  }
 }
 .kcraedu .education.fold .btn-toggle-open {
   display: inline-block;
@@ -14131,7 +14138,9 @@ hr {
   position: relative;
   min-width: 25rem;
   width: 30%;
+  transition: all 0.6s ease-in-out;
   z-index: 20;
+  overflow: hidden;
 }
 @media (max-width: 991.98px) {
   .kcraedu .education-nav {
@@ -14169,6 +14178,12 @@ hr {
 .kcraedu .education-nav__inner {
   height: 100%;
   background: #fff;
+  min-width: 25rem;
+}
+@media (max-width: 991.98px) {
+  .kcraedu .education-nav__inner {
+    min-width: 18.75rem;
+  }
 }
 .kcraedu .education-nav__header {
   border-radius: 1.875rem 1.875rem 1.875rem 0;
