--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -2873,6 +2873,7 @@ hr {
   }
   .education {
     display: flex;
+    gap: 16px;
     width: 100vw;
     height: 100vh;
     //overflow: hidden;
@@ -2884,7 +2885,11 @@ hr {
     &.fold {
       //padding-left: 0;
       .education-nav {
-        display: none;
+        min-width: 0;
+        width: 0;
+        @include media-breakpoint-down(md) {
+          display: none;
+        }
       }
       .btn-toggle-open {
         display: inline-block;
@@ -2908,8 +2913,9 @@ hr {
       position: relative;
       min-width: 25rem;
       width: 30%;
-      //transition: all 0.2s ease;
+      transition: all 0.6s ease-in-out;
       z-index: 20;
+      overflow: hidden;
       @include media-breakpoint-down(lg) {
         min-width: 18.75rem;
         width: 20%;
@@ -2943,6 +2949,10 @@ hr {
       &__inner {
         height: 100%;
         background: #fff;
+        min-width: 25rem;
+        @include media-breakpoint-down(lg) {
+          min-width: 18.75rem;
+        }
       }
       &__header {
         border-radius: 1.875rem 1.875rem 1.875rem 0;
