--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -3109,7 +3109,7 @@ hr {
         &-inner {
           position: relative;
           width: 100%;
-          //max-width: 1035px;
+          max-width: 1035px;
           // height: 50%;
         }
         // @include media-breakpoint-down(lg) {
