--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -14347,6 +14347,7 @@ hr {
 .kcraedu .education-contents__player-inner {
   position: relative;
   width: 100%;
+  max-width: 1035px;
 }
 .kcraedu .education-contents__button {
   display: flex;
