--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -11386,11 +11386,13 @@ hr {
     display: block !important;
   }
 }
+form {
+  margin: 0;
+}
+
 .kcraedu {
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - 2px);
-  overflow: hidden;
 }
 .kcraedu header {
   position: relative;
@@ -14100,9 +14102,7 @@ hr {
 }
 .kcraedu .education {
   display: flex;
-  gap: 16px;
-  width: 100vw;
-  height: 100vh;
+  gap: 60px;
   padding: 1rem;
 }
 @media (max-width: 767.98px) {
@@ -14115,13 +14115,24 @@ hr {
   min-width: 0;
   width: 0;
 }
+.kcraedu .education.fold .education-nav__inner {
+  transform: translateX(calc(-100% - 16px));
+}
+.kcraedu .education.fold .education-nav__inner button i {
+  transform: rotate(180deg);
+}
 @media (max-width: 767.98px) {
   .kcraedu .education.fold .education-nav {
     display: none;
   }
 }
 .kcraedu .education.fold .btn-toggle-open {
-  display: inline-block;
+  display: none;
+}
+@media (max-width: 767.98px) {
+  .kcraedu .education.fold .btn-toggle-open {
+    display: block;
+  }
 }
 @media (max-width: 991.98px) {
   .kcraedu .education.fold .education-contents__question {
@@ -14140,7 +14151,6 @@ hr {
   width: 30%;
   transition: all 0.6s ease-in-out;
   z-index: 20;
-  overflow: hidden;
 }
 @media (max-width: 991.98px) {
   .kcraedu .education-nav {
@@ -14179,6 +14189,10 @@ hr {
   height: 100%;
   background: #fff;
   min-width: 25rem;
+  transition: all 0.6s ease-in-out;
+}
+.kcraedu .education-nav__inner i {
+  transition: all 0.6s ease-in-out;
 }
 @media (max-width: 991.98px) {
   .kcraedu .education-nav__inner {
@@ -14186,18 +14200,41 @@ hr {
   }
 }
 .kcraedu .education-nav__header {
-  border-radius: 1.875rem 1.875rem 1.875rem 0;
+  border-radius: 1.875rem 0 1.875rem 0;
   padding: 1.25rem;
   background: #193b92;
 }
 .kcraedu .education-nav__close {
-  text-align: right;
+  font-size: 18px;
+  color: #fff;
 }
-.kcraedu .education-nav__close .btn {
-  border-radius: 6.25rem;
+.kcraedu .education-nav__close button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 80px;
+  background: #193b92;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  border-radius: 0 10px 10px 0;
+  transform: translateX(90%);
 }
-.kcraedu .education-nav__close .btn i {
-  margin-left: 0.375rem;
+@media (max-width: 767.98px) {
+  .kcraedu .education-nav__close {
+    font-size: 24px;
+  }
+  .kcraedu .education-nav__close button {
+    width: 40px;
+    height: 60px;
+    line-height: 1;
+    transform: translateX(0);
+  }
 }
 .kcraedu .education-nav__title {
   margin: 1.875rem 0 1.25rem 0;
@@ -14226,7 +14263,7 @@ hr {
   font-size: 0.875rem;
 }
 .kcraedu .education-nav__list {
-  height: calc(100vh - 18rem);
+  height: calc(100vh - 248px);
   margin: 1rem 0 0 0;
   padding: 1rem;
   overflow: auto;
@@ -14302,7 +14339,6 @@ hr {
   position: relative;
   z-index: 10;
   width: 100%;
-  padding: 0 2.5rem;
 }
 @media (max-width: 991.98px) {
   .kcraedu .education-contents {
@@ -14331,12 +14367,16 @@ hr {
   margin-left: 0.375rem;
 }
 .kcraedu .education-contents__body {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  height: calc(100vh - 80px);
 }
 .kcraedu .education-contents__player {
   display: flex;
   align-items: center;
   width: 100%;
+  height: calc(100vh - 128px);
   overflow: auto;
   justify-content: center;
 }
@@ -14345,9 +14385,17 @@ hr {
   height: 100%;
 }
 .kcraedu .education-contents__player-inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   width: 100%;
-  max-width: 1035px;
+  height: 100%;
+}
+.kcraedu .education-contents__player-inner .video-js {
+  width: 100%;
+  height: 100%;
+  padding: 0;
 }
 .kcraedu .education-contents__button {
   display: flex;
