--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -51,12 +51,14 @@ hr {
     display: block !important;
   }
 }
-
+form {
+  margin: 0;
+}
 .kcraedu {
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - 2px);
-  overflow: hidden;
+  // min-height: calc(100vh - 2px);
+  // overflow: hidden;
 
   //layout
   header {
@@ -2873,9 +2875,10 @@ hr {
   }
   .education {
     display: flex;
-    gap: 16px;
-    width: 100vw;
-    height: 100vh;
+    gap: 60px;
+    //gap: 16px;
+    // width: 100vw;
+    // height: 100vh;
     //overflow: hidden;
     padding: 1rem;
     @include media-breakpoint-down(md) {
@@ -2887,12 +2890,24 @@ hr {
       .education-nav {
         min-width: 0;
         width: 0;
+        // overflow: hidden;
+        &__inner {
+          transform: translateX(calc(-100% - 16px));
+          button {
+            i {
+              transform: rotate(180deg);
+            }
+          }
+        }
         @include media-breakpoint-down(md) {
           display: none;
         }
       }
       .btn-toggle-open {
-        display: inline-block;
+        display: none;
+        @include media-breakpoint-down(md) {
+          display: block;
+        }
       }
       @include media-breakpoint-down(lg) {
         .education-contents__player {
@@ -2915,7 +2930,7 @@ hr {
       width: 30%;
       transition: all 0.6s ease-in-out;
       z-index: 20;
-      overflow: hidden;
+      // overflow: hidden;
       @include media-breakpoint-down(lg) {
         min-width: 18.75rem;
         width: 20%;
@@ -2950,21 +2965,47 @@ hr {
         height: 100%;
         background: #fff;
         min-width: 25rem;
+        transition: all 0.6s ease-in-out;
+        i {
+          transition: all 0.6s ease-in-out;
+        }
         @include media-breakpoint-down(lg) {
           min-width: 18.75rem;
         }
       }
       &__header {
-        border-radius: 1.875rem 1.875rem 1.875rem 0;
+        border-radius: 1.875rem 0 1.875rem 0;
         padding: 1.25rem;
         background: #193b92;
       }
       &__close {
-        text-align: right;
-        .btn {
-          border-radius: 6.25rem;
-          i {
-            margin-left: 0.375rem;
+        font-size: 18px;
+        color: #fff;
+        button {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: absolute;
+          top: 0;
+          right: 0;
+          width: 40px;
+          height: 80px;
+          background: #193b92;
+          border: 0;
+          margin: 0;
+          padding: 0;
+          color: #fff;
+          border-radius: 0 10px 10px 0;
+          transform: translateX(90%);
+        }
+        @include media-breakpoint-down(md) {
+          font-size: 24px;
+
+          button {
+            width: 40px;
+            height: 60px;
+            line-height: 1;
+            transform: translateX(0);
           }
         }
       }
@@ -2995,7 +3036,7 @@ hr {
         font-size: 0.875rem;
       }
       &__list {
-        height: calc(100vh - 18rem);
+        height: calc(100vh - 248px);
         margin: 1rem 0 0 0;
         padding: 1rem;
         overflow: auto;
@@ -3067,7 +3108,7 @@ hr {
       position: relative;
       z-index: 10;
       width: 100%;
-      padding: 0 2.5rem;
+      //padding: 0 2.5rem;
       @include media-breakpoint-down(lg) {
         padding: 0;
       }
@@ -3093,13 +3134,16 @@ hr {
         }
       }
       &__body {
+        display: flex;
+        flex-direction: column;
         width: 100%;
+        height: calc(100vh - 80px);
       }
       &__player {
         display: flex;
         align-items: center;
         width: 100%;
-        // height: calc(100vh - 11rem);
+        height: calc(100vh - 128px);
         overflow: auto;
         justify-content: center;
         iframe {
@@ -3107,9 +3151,21 @@ hr {
           height: 100%;
         }
         &-inner {
+          display: flex;
+          align-items: center;
+          justify-content: center;
           position: relative;
           width: 100%;
-          max-width: 1035px;
+          height: 100%;
+          .video-js {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            //aspect-ratio: 16 / 9;
+          }
+          //aspect-ratio: 16 / 9;
+
+          //max-width: 1035px;
           // height: 50%;
         }
         // @include media-breakpoint-down(lg) {
