--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -288,7 +288,7 @@ form {
           dt {
             font-weight: 500;
             font-size: 0.875rem;
-            line-height: 1.©3rem;
+            line-height: 1.313rem;
             /* identical to box height */
 
             /* #999999 */
