--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -1399,7 +1399,7 @@ p {
         width: 100%;
         padding: 21px 30px 20px 30px;
         input {
-          width: 100%;
+          //width: 100%;
         }
       }
       &__phone {
