--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -1223,6 +1223,34 @@ p {
           overflow: auto;
         }
       }
+      .policy-agree-wrap {
+        padding: 30px 0 0 0;
+        font-size: 16px;
+      }
+      .img-block {
+        img {
+          max-width: 100%;
+        }
+      }
+      .pay-cover-title {
+        padding: 20px 0 0 0;
+        text-align: center;
+        font-size: 16px;
+      }
+      @include media-breakpoint-down(xl) {
+        .policy-agree-wrap {
+          gap: 20px;
+        }
+      }
+      .policy-grid {
+        padding: 30px 0;
+        border: 1px solid var(--06-border-01-gray-e-4-e-4-e-4, #e4e4e4);
+        border-radius: 16px;
+        transition: all 0.1s ease;
+        &:hover {
+          border-color: var(--00-primary-02-blue-013-eb-7, #013eb7);
+        }
+      }
     }
     &-complete {
       padding: 160px 0;
